--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,137 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible Research Assignment 1"
+author: "Will Hinson"
+date: "6/5/2020"
+output: html_document
 ---
 
+Loading and preprocessing the data
+----------------------------------
 
-## Loading and preprocessing the data
+Unzip data to obtain a csv file.
+
+``` {r}
+library("data.table")
+library(ggplot2)
+
+fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+download.file(fileUrl, destfile = paste0(getwd(), '/repdata%2Fdata%2Factivity.zip'), method = "curl")
+unzip("repdata%2Fdata%2Factivity.zip",exdir = "data")
+```
+
+Read the CSV data into the Analysis.
+---------------------------------
+
+``` {r}
+rawdata <- data.table::fread(input = "data/activity.csv")
+```
+
+What is mean total number of steps taken per day?
+-------------------------------------------------
+
+1.  Calculate the total number of steps taken per day
+
+``` {r}
+Steps_Total <- rawdata[, c(lapply(.SD, sum, na.rm = FALSE)), .SDcols = c("steps"), by = .(date)] 
+
+head(Steps_Total, 10)
+```
+
+ 
+
+2.  If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day.
+
+``` {r}
+ggplot(Steps_Total, aes(x = steps)) +
+    geom_histogram(fill = "blue", binwidth = 1000) +
+    labs(title = "Total Steps Per Day", x = "Steps", y = "Total")
+```
 
 
 
-## What is mean total number of steps taken per day?
+3.  Calculate and report the mean and median of the total number of steps taken per day
+
+``` {r}
+Steps_Total[, .(Mean_Steps = mean(steps, na.rm = TRUE), Median_Steps = median(steps, na.rm = TRUE))]
+```
+
+What is the average daily activity pattern?
+-------------------------------------------
+
+1.  Make a time series plot (i.e. 𝚝𝚢𝚙𝚎 = "𝚕") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+``` {r}
+Interval_data <- rawdata[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval)] 
+
+ggplot(Interval_data, aes(x = interval , y = steps)) + geom_line(color="blue", size=1) + labs(title = "Avg. Daily Steps", x = "Intervals", y = "Average")
+```
 
 
+2.  Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
-## What is the average daily activity pattern?
+``` {r}
+Interval_data[steps == max(steps), .(max_interval = interval)]
+```
+
+Imputing missing values
+-----------------------
+
+1.  Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with 𝙽𝙰s)
+
+``` {r}
+rawdata[is.na(steps), .N ]
+```
 
 
+2.  Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
-## Imputing missing values
+``` {r}
+# Use the mean to represent the missing values. 
+rawdata[is.na(steps), "steps"] <- rawdata[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps")]
+```
+
+3.  Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+``` {r}
+data.table::fwrite(x = rawdata, file = "data/tidyData.csv", quote = FALSE)
+```
+
+4.  Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+``` {r}
+# Total Number of Steps
+Total_Steps <- rawdata[, c(lapply(.SD, sum)), .SDcols = c("steps"), by = .(date)] 
+
+# Mean & Median number of Steps
+Total_Steps[, .(Mean_Steps = mean(steps), Median_Steps = median(steps))]
+```
 
 
+``` {r}
+ggplot(Total_Steps, aes(x = steps)) + geom_histogram(fill = "blue", binwidth = 1000) + labs(title = "Total Steps", x = "Steps", y = "Frequency")
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
+
+Are there differences in activity patterns between weekdays and weekends?
+-------------------------------------------------------------------------
+
+1.  Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+``` {r}
+rawdata[, date := as.POSIXct(date, format = "%Y-%m-%d")]
+rawdata[, `Day of Week`:= weekdays(x = date)]
+rawdata[grepl(pattern = "Monday|Tuesday|Wednesday|Thursday|Friday", x = `Day of Week`), "weekday or weekend"] <- "weekday"
+rawdata[grepl(pattern = "Saturday|Sunday", x = `Day of Week`), "weekday or weekend"] <- "weekend"
+rawdata[, `weekday or weekend` := as.factor(`weekday or weekend`)]
+head(rawdata, 10)
+```
+
+
+2.  Make a panel plot containing a time series plot (i.e. 𝚝𝚢𝚙𝚎 = "𝚕") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+
+``` {r}
+rawdata[is.na(steps), "steps"] <- rawdata[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
+Interval_data <- rawdata[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval, `weekday or weekend`)] 
+
+ggplot(Interval_data , aes(x = interval , y = steps, color=`weekday or weekend`)) + geom_line() + labs(title = "Avg Steps by Category", x = "Interval", y = "Total Steps") + facet_wrap(~`weekday or weekend` , ncol = 1, nrow=2)
+```
