--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -37,11 +37,11 @@ Steps_Total <- rawdata[, c(lapply(.SD, sum, na.rm = FALSE)), .SDcols = c("steps"
 head(Steps_Total, 10)
 ```
 
- 
 
 2.  If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day.
 
-``` {r}
+``` {r} 
+##See Plot 1 attached in repository
 ggplot(Steps_Total, aes(x = steps)) +
     geom_histogram(fill = "blue", binwidth = 1000) +
     labs(title = "Total Steps Per Day", x = "Steps", y = "Total")
@@ -63,7 +63,10 @@ What is the average daily activity pattern?
 ``` {r}
 Interval_data <- rawdata[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval)] 
 
+## See Plot 2 in Repository
 ggplot(Interval_data, aes(x = interval , y = steps)) + geom_line(color="blue", size=1) + labs(title = "Avg. Daily Steps", x = "Intervals", y = "Average")
+
+
 ```
 
 
@@ -108,7 +111,9 @@ Total_Steps[, .(Mean_Steps = mean(steps), Median_Steps = median(steps))]
 
 
 ``` {r}
+## See plot 3 in Repository
 ggplot(Total_Steps, aes(x = steps)) + geom_histogram(fill = "blue", binwidth = 1000) + labs(title = "Total Steps", x = "Steps", y = "Frequency")
+
 ```
 
 
@@ -133,5 +138,7 @@ head(rawdata, 10)
 rawdata[is.na(steps), "steps"] <- rawdata[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
 Interval_data <- rawdata[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval, `weekday or weekend`)] 
 
+## See Plot 4 in Repository
 ggplot(Interval_data , aes(x = interval , y = steps, color=`weekday or weekend`)) + geom_line() + labs(title = "Avg Steps by Category", x = "Interval", y = "Total Steps") + facet_wrap(~`weekday or weekend` , ncol = 1, nrow=2)
+
 ```
